--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,9 @@
 name: identifier
 description: A new Flutter plugin.
 version: 0.0.1
-author:
-homepage:
+homepage: https://github.com/EdinsonNM/identifier
+authors:
+  nmedinson@gmail.com
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
